Refactored test to utilize hql and addData function to condense grabbing students